--- a/archives3.html
+++ b/archives3.html
@@ -42,7 +42,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -94,6 +94,15 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="/posts/book-review-the-source-james-michener">
+                                <h3>Book Review: The Source by James A. Michener</h3>
+                            </a>
+                        </header>
+                        <p>The Source by James A. Michener Uses the background of an archaeological dig, to chronicle the rise of religion (specifically Judaism) from prehistory (30000 yrs ago), to the modern state of Israel (till 1960s, when the book was written). Defines the relationship of Judaism, with other derivative religions - Christianity and …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="/posts/nuclear-power">
                                 <h3>Nuclear Power</h3>
                             </a>
@@ -126,15 +135,6 @@
                             </a>
                         </header>
                         <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had a long way to go - many responsibilities to fulfil. Keeping fit was the reasonable thing to …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/love-because">
-                                <h3>Because</h3>
-                            </a>
-                        </header>
-                        <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on the tip of his tongue. "Why?" He thought. There was nothing to suggest he was …</p>
                     </section>
  
 <div class="row ">
@@ -178,7 +178,7 @@
                                 <h3>Search</h3>
                             </header>
                             <span>
-                                <form action="search">
+                                <form action="/search">
                                     <div class="tipue_search_group">
                                         <input type="text" class="search-query" id="tipue_search_input" placeholder="Search" name="q" required onsubmit="return validateForm(this.elements['q'].value);">
                                         <button type="submit" class="button special search-button tipue_search_button">
@@ -194,18 +194,6 @@
                             <h3>All Tags</h3>
                         </header>
 <ul class="tagcloud">
-    <li class="tag-4 list-group-item">
-        <a href="/tag/adhd">
-            adhd
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/beginning">
-            beginning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/book">
             book
@@ -224,12 +212,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/depression">
-            depression
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/diary">
             diary
@@ -242,12 +224,6 @@
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/experiment">
-            experiment
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/facebook">
             facebook
@@ -255,8 +231,14 @@
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="/tag/feelings">
-            feelings
+        <a href="/tag/html">
+            html
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/jinja">
+            jinja
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -278,10 +260,22 @@
                     <span class="badge">(3)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/pelican">
+            pelican
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/personal">
             personal
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/python">
+            python
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -302,10 +296,16 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/static-site">
+            static site
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/technology">
             technology
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
