--- a/categories.html
+++ b/categories.html
@@ -42,7 +42,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -81,7 +81,7 @@
         <li><a href="/category/personal">Personal</a> (3)</li>
         <li><a href="/category/reviews">Reviews</a> (2)</li>
         <li><a href="/category/scribbles">Scribbles</a> (8)</li>
-        <li><a href="/category/technology">Technology</a> (2)</li>
+        <li><a href="/category/technology">Technology</a> (3)</li>
     </ul>
  <!-- Footer -->
 <footer id="footer">
