--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-frown-o"></span>
+                    <header>
+                        <a href="/posts/not-today" rel='bookmark'>
+                            <h3>Not Today</h3>
+                        </a>
+                    </header>
+                    <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/not-today" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-smile-o"></span>
                     <header>
                         <a href="/posts/growing-up" rel='bookmark'>
@@ -157,24 +175,6 @@
                     <footer>
                         <ul class="buttons">
                             <li><a href="/posts/we-all-need-the-eggs" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-thumbs-up"></span>
-                    <header>
-                        <a href="/posts/the-facebook-experiment" rel='bookmark'>
-                            <h3>The Facebook Experiment</h3>
-                        </a>
-                    </header>
-                    <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/the-facebook-experiment" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
