--- a/index3.html
+++ b/index3.html
@@ -69,7 +69,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -131,6 +131,24 @@
                 <section>
                     <span class="icon feature fa-thumbs-up"></span>
                     <header>
+                        <a href="/posts/the-facebook-experiment" rel='bookmark'>
+                            <h3>The Facebook Experiment</h3>
+                        </a>
+                    </header>
+                    <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/the-facebook-experiment" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
+                    <span class="icon feature fa-thumbs-up"></span>
+                    <header>
                         <a href="/posts/to-like-or-not-to-like" rel='bookmark'>
                             <h3>To Like or Not to Like...</h3>
                         </a>
@@ -157,24 +175,6 @@
                     <footer>
                         <ul class="buttons">
                             <li><a href="/posts/the-power-of-stories" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-pencil"></span>
-                    <header>
-                        <a href="/posts/i-want-to-talk-to-you" rel='bookmark'>
-                            <h3>I Want to Talk to You...</h3>
-                        </a>
-                    </header>
-                    <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/i-want-to-talk-to-you" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
