--- a/index4.html
+++ b/index4.html
@@ -69,7 +69,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-pencil"></span>
+                    <header>
+                        <a href="/posts/i-want-to-talk-to-you" rel='bookmark'>
+                            <h3>I Want to Talk to You...</h3>
+                        </a>
+                    </header>
+                    <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/i-want-to-talk-to-you" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-book"></span>
                     <header>
                         <a href="/posts/book-review-the-source-james-michener" rel='bookmark'>
@@ -157,24 +175,6 @@
                     <footer>
                         <ul class="buttons">
                             <li><a href="/posts/nuclear-power" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-arrows-h"></span>
-                    <header>
-                        <a href="/posts/this-way-and-that" rel='bookmark'>
-                            <h3>This way and That...</h3>
-                        </a>
-                    </header>
-                    <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the d</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/this-way-and-that" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
