--- a/archives2.html
+++ b/archives2.html
@@ -42,7 +42,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -94,6 +94,15 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="/posts/we-all-need-the-eggs">
+                                <h3>We all Need the Eggs...</h3>
+                            </a>
+                        </header>
+                        <p>My parents have been here for the last couple of weeks. It's nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging. The house feels like a home... There's an interesting Woody Allen …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="/posts/the-facebook-experiment">
                                 <h3>The Facebook Experiment</h3>
                             </a>
@@ -126,15 +135,6 @@
                             </a>
                         </header>
                         <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - of thoughts - of understanding, flowing down into the valley that now …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/book-review-the-source-james-michener">
-                                <h3>Book Review: The Source by James A. Michener</h3>
-                            </a>
-                        </header>
-                        <p>The Source by James A. Michener Uses the background of an archaeological dig, to chronicle the rise of religion (specifically Judaism) from prehistory (30000 yrs ago), to the modern state of Israel (till 1960s, when the book was written). Defines the relationship of Judaism, with other derivative religions - Christianity and …</p>
                     </section>
  
 <div class="row ">
@@ -178,7 +178,7 @@
                                 <h3>Search</h3>
                             </header>
                             <span>
-                                <form action="search">
+                                <form action="/search">
                                     <div class="tipue_search_group">
                                         <input type="text" class="search-query" id="tipue_search_input" placeholder="Search" name="q" required onsubmit="return validateForm(this.elements['q'].value);">
                                         <button type="submit" class="button special search-button tipue_search_button">
@@ -194,18 +194,6 @@
                             <h3>All Tags</h3>
                         </header>
 <ul class="tagcloud">
-    <li class="tag-4 list-group-item">
-        <a href="/tag/adhd">
-            adhd
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/beginning">
-            beginning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/book">
             book
@@ -224,12 +212,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/depression">
-            depression
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/diary">
             diary
@@ -242,12 +224,6 @@
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/experiment">
-            experiment
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/facebook">
             facebook
@@ -255,8 +231,14 @@
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="/tag/feelings">
-            feelings
+        <a href="/tag/html">
+            html
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/jinja">
+            jinja
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -278,10 +260,22 @@
                     <span class="badge">(3)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/pelican">
+            pelican
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/personal">
             personal
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/python">
+            python
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -302,10 +296,16 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/static-site">
+            static site
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/technology">
             technology
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
