--- a/archives4.html
+++ b/archives4.html
@@ -42,7 +42,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -91,6 +91,15 @@
 
             <div class="8u">
                 <div class="content">
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/love-because">
+                                <h3>Because</h3>
+                            </a>
+                        </header>
+                        <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on the tip of his tongue. "Why?" He thought. There was nothing to suggest he was …</p>
+                    </section>
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
@@ -151,7 +160,7 @@
                                 <h3>Search</h3>
                             </header>
                             <span>
-                                <form action="search">
+                                <form action="/search">
                                     <div class="tipue_search_group">
                                         <input type="text" class="search-query" id="tipue_search_input" placeholder="Search" name="q" required onsubmit="return validateForm(this.elements['q'].value);">
                                         <button type="submit" class="button special search-button tipue_search_button">
@@ -167,18 +176,6 @@
                             <h3>All Tags</h3>
                         </header>
 <ul class="tagcloud">
-    <li class="tag-4 list-group-item">
-        <a href="/tag/adhd">
-            adhd
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/beginning">
-            beginning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/book">
             book
@@ -197,12 +194,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/depression">
-            depression
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/diary">
             diary
@@ -215,12 +206,6 @@
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/experiment">
-            experiment
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/facebook">
             facebook
@@ -228,8 +213,14 @@
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="/tag/feelings">
-            feelings
+        <a href="/tag/html">
+            html
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/jinja">
+            jinja
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -251,10 +242,22 @@
                     <span class="badge">(3)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/pelican">
+            pelican
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/personal">
             personal
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/python">
+            python
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -275,10 +278,16 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/static-site">
+            static site
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/technology">
             technology
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
