--- a/index5.html
+++ b/index5.html
@@ -69,7 +69,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-arrows-h"></span>
+                    <header>
+                        <a href="/posts/this-way-and-that" rel='bookmark'>
+                            <h3>This way and That...</h3>
+                        </a>
+                    </header>
+                    <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the d</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/this-way-and-that" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-book"></span>
                     <header>
                         <a href="/posts/book-review-king-queen-knave-nabokov" rel='bookmark'>
@@ -157,24 +175,6 @@
                     <footer>
                         <ul class="buttons">
                             <li><a href="/posts/reasonable" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-heart"></span>
-                    <header>
-                        <a href="/posts/love-because" rel='bookmark'>
-                            <h3>Because</h3>
-                        </a>
-                    </header>
-                    <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/love-because" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
