--- a/index6.html
+++ b/index6.html
@@ -69,7 +69,7 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="search">Search</a></li>
+                <li><a href="/search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
                 <li class="submenu">
                     <a href="/archives">Blog</a>
@@ -126,6 +126,24 @@
                 <h2>Latest Posts</h2>
             </div>
 
+            <div class="4u">
+
+                <section>
+                    <span class="icon feature fa-heart"></span>
+                    <header>
+                        <a href="/posts/love-because" rel='bookmark'>
+                            <h3>Because</h3>
+                        </a>
+                    </header>
+                    <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/love-because" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
             <div class="4u">
 
                 <section>
